# telegram-bot-docker-boilerplate

./: .env  cookiecutter.json  pyproject.toml  readme.md
{{cookiecutter.project_folder}}/: pyproject.toml
