[tool.poetry]
name = "telegram_cleaner_bot"
version = "0.1.0"
description = "Telegram boilerplate bot"
authors = ["Nikolay Pavlin <afaneor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.991"
flake8 = "^3.9.0"
loguru = "^0.5.3"
django-environ = "^0.4.5"
isort = "^5.8.0"
python-telegram-bot = "^20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
